--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,25 @@
+server:
+  port: 8080
 spring:
   application:
     name: todo
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: Ebili.02
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties :
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+#jpa:
+#    properties:
+#      hibernate:
+#        dialect=org:
+#          hibernate:
+#            dialect:
+#              PostgreSQLDialect:
