--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
 	//implementation 'javax.persistence:javax.persistence-api:2.2'
 	implementation 'org.hibernate:hibernate-core:6.6.0.Final'
+	implementation 'org.hibernate.orm:hibernate-core:6.6.0.Final'//bunu sonradan ekledin 03 eylül
 }
 
 tasks.named('test') {
